# hdl-copilot-backend

./: .gitignore  .gitmodules  README.md
server/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  build.bat  build.sh  format.sh  make_linux_app.sh
server/src/: CMakeLists.txt  completions.hpp  languageclient.cpp  languageclient.hpp  license.cpp  license.hpp  lookupvisitor.hpp  main.cpp  packethandler.cpp  packethandler.hpp  project.cpp  project.hpp  rootunit.cpp  rootunit.hpp  shared.cpp  shared.hpp  utils.cpp  utils.hpp
server/tests/: CMakeLists.txt  integration_tests.py  run_integration_tests.bat  run_integration_tests.sh  test_utils.cpp
server/tests/projects/broken_include/: existent.svh  main.sv
server/tests/projects/exclusions/: .hdl-project  main_tb.sv
server/tests/projects/exclusions/flat_foo/: foo2.sv
server/tests/projects/exclusions/level_foo/foo1/: foo1.sv
server/tests/projects/exclusions/level_foo/foo2/: foo2.sv
server/tests/projects/missing_macro/: main.sv
server/tests/projects/missing_one_file/: definitions.svh  test_tb.sv
server/tests/projects/ok_include/: main.sv  some_defines.svh  some_module.sv
server/tests/projects/one_bad_file/: bad.sv  good.sv
server/tests/projects/redefinitions/: .hdl-project  foo1.sv  foo2.sv  foo_tb.sv
